'ICU设置相关信息'

--- a/resources/locales/zh-CN/demo.json
+++ b/resources/locales/zh-CN/demo.json
@@ -1,3 +1,7 @@
 {
-    "greeting" : "您好，世界！！！"
+    "greeting" : "您好，世界！！！",
+    "message"  : "{gender, select, male {他} female {她} other {他们} } 已经来了。",
+    "candy"    : "{count, plural, =0 {没有糖果了} =1 {还剩下 # 个糖果} other {还剩下 # 个糖果}}",
+    "day"      : "今天是 {today, date, longWeekDay}"
+
 }
