--- a/resources/locales/en-US/demo.json
+++ b/resources/locales/en-US/demo.json
@@ -1,3 +1,6 @@
 {
-    "greeting" : "hello world！！！"
+    "greeting" : "hello world！！！",
+    "message"  : "{gender, select, male {He} female {She} other {They} } will coming.",
+    "candy"    : "{count, plural, =0 {No candy left} =1 {Got # candy left} other {Got # candies left}}",
+    "day"      : "Today is {today, date, longWeekDay}"
 }
